[gd_scene load_steps=7 format=3 uid="uid://coywj5kl2qfg3"]

[ext_resource type="Script" path="res://Content/Core/Characters/Starretri/GD_Stary.gd" id="1_vihag"]
[ext_resource type="Curve3D" uid="uid://b5eh1orifudtg" path="res://Content/Core/Characters/Starretri/C_AttackAnim.tres" id="2_cc6cp"]
[ext_resource type="PackedScene" uid="uid://dbn8htlc45n7c" path="res://Content/Core/Characters/Starretri/B_AttackBox.tscn" id="3_jvy1y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tgekv"]
radius = 0.569079
height = 1.13816

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gbp2g"]
emission_enabled = true
emission = Color(1, 0, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_rkbws"]
material = SubResource("StandardMaterial3D_gbp2g")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_vihag")
attack_curve = ExtResource("2_cc6cp")
hit_scene = ExtResource("3_jvy1y")

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tgekv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_rkbws")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.991086, 0.133225, 0, -0.133225, 0.991086, 0, 2.5, 0)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="WorkTimer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 541.0
offset_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Cooldown:"

[node name="Count" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "S"

[node name="Progress" type="ProgressBar" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
show_percentage = false

[connection signal="timeout" from="WorkTimer" to="." method="end_working"]
